--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ input("#greetingInput", proxy => {
   <script>
     hljs.highlightAll(); // Initialize syntax highlighting
   </script>
-  <script src="./resign.js"></script>
+  <script src="./signel.js"></script>
   <script>
     new El("OddFeatureSection", proxy => {
       proxy.classes("h-screen bg-gray-800 text-gray-100 flex flex-col justify-center items-center text-center px-10");
